# superttt-python

./: .gitignore  Cargo.toml  main.ipynb  pyproject.toml  superttt.pyi
.github/workflows/: CI.yml  docs.yml
docs/: index.html  search.js  superttt.html
docs/source/: modules.rst
source/: conf.py  index.rst
src/: lib.rs
